Para que la sombra del simbolo se ponga correctamente 1 z-index: 9; y 2 position del .hero en relative

--- a/style.css
+++ b/style.css
@@ -18,15 +18,18 @@ a {
 }
 
 main .falkrum {
+    position: relative;
     margin: 10px;
     display: grid;
     grid-template-columns: minmax(300px, 6fr) 5fr;
     grid-auto-rows: 300px;
     align-items: center;
+    overflow: hidden;
 }
 
 main .falkrum-description {
     padding: 0 25px;
+    z-index: 9;
 }
 
 main .falkrum-description__tittle,
@@ -137,10 +140,10 @@ main .falkrum-imagen {
 @media screen and (max-width: 768px) {
     main .falkrum {
         grid-template-columns: minmax(300px, 1fr);
-        /* background-image: url("./Recursos/Falkrum\ Tales-Logo.jpg");
+        background-image: url("./Recursos/Falkrum\ Tales-Logo.jpg");
         background-repeat: no-repeat;
         background-position: top;
-        background-size: contain; */
+        background-size: contain;
     }
 
     /* main .falkrum-description__text,
@@ -148,13 +151,13 @@ main .falkrum-imagen {
         text-align: center;
     } */
 
-    /* .falkrum::before {
+    .falkrum::before {
         content: '';
         position: absolute;
         width: 100%;
         height: 100%;
         background: linear-gradient(90deg, #ffffff 20%, rgba(0, 0, 0, 0));
-    } */
+    }
 
     .falkrum img {
         display: none;
